--- a/slides/main.tex
+++ b/slides/main.tex
@@ -9,7 +9,7 @@
 
 \title{ide}
 \subtitle{Projet de génie logiciel}
-\author{G. Boudy, K.Lerun, L. Prosperi, R. Zucchini}
+\author{G. Le Bouder, K. Lerun, L. Prosperi, R. Zucchini}
 
 \begin{document}
 \maketitle
