--- a/slides/main.tex
+++ b/slides/main.tex
@@ -43,6 +43,7 @@
         \item Compilation : ocamlbuild(.mlpack, \_tags)/make
         \item Tests : OUnit2
         \item Documentation : ocamldoc(.odocl)
+        \item Intégration continue: Travis    
     \end{itemize}
 \end{frame}
 
